Fix invisible privacy text

--- a/src/styles/Privacy.module.scss
+++ b/src/styles/Privacy.module.scss
@@ -1,5 +1,6 @@
 .privacy{
     font-family: sans-serif;
+    color: black;
     line-height: 1rem;
 
     width: 100%;
